--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>admin2</title>
     <link rel="stylesheet" href="/dist/main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+    
+    
   </body>
 </html>
